{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Movement",
            "id": "dcd21c34-d745-4535-aa16-6f6b4263663c",
            "actions": [
                {
                    "name": "PrimaryFingerPosition",
                    "type": "Value",
                    "id": "6e24c343-4ba7-4c18-88b0-ce69a2195c26",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryFingerPosition",
                    "type": "Value",
                    "id": "9be49493-125f-4775-8e24-966124412fc6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseScrollPosition",
                    "type": "Value",
                    "id": "f3c61c15-47e6-472a-a4bf-0df96ddde5a3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseLeftClickMovePosition",
                    "type": "Button",
                    "id": "711b77f1-3608-4fd1-9f4f-47b3c0345a01",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch0",
                    "type": "Button",
                    "id": "c63c3b38-d1a2-445c-bdcf-1cc41e8070a3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch1",
                    "type": "Button",
                    "id": "96358f1a-8c97-4a22-812c-6ebbcf93f0ab",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a1253432-6977-4ec3-ad8d-b413d99b810c",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe98b18f-48ee-4864-811f-41ac39b9ac90",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90aae316-0661-4341-ba20-6a56a103398e",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScrollPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a031f1d5-4d93-43ca-a96c-7c05fcf47f27",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClickMovePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "e3360ca5-722e-47ea-864c-cac6da40daf9",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch0",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "c56bd8b6-fc65-4635-97f0-202c847db6ef",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "b52684d8-82b7-4fb1-90fa-a98ad2e88a0c",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "b0477e79-7503-4a5f-aa04-4a181281883b",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch1",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "81328609-7560-4e81-8e67-d2acceec097c",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "ad2e24f2-0689-486c-bc09-68bcc57f487e",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": []
        }
    ]
}